--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
         <version>2.3.3.RELEASE</version>
     </parent>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
 
     <build>
         <plugins>
@@ -28,16 +32,24 @@
         </plugins>
     </build>
 
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.thulani</groupId>
+            <artifactId>Textbook_System</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
