--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DB configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/textbook_system
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Textbook_System
 spring.datasource.username=root
-spring.datasource.data-password=Jbq5q7lli
+spring.datasource.data-password=
